# simple

./: .gitignore  CMakeLists.txt  TODO  check.sh
src/: CMakeLists.txt  base_map.c  base_map.h  base_string.c  base_string.h  builtin_types.c  builtin_types.h  main.c  object.c  object.h  simple_error.c  simple_error.h  simple_hashtable.c  simple_hashtable.h  simple_object.c  simple_object.h  simple_progressbar.c  simple_progressbar.h  simple_string.c  simple_string.h  simple_test.c  simple_test.h  simple_types.c  simple_types.h  state.c  state.h  type.c  type.h  type_registry.c  type_registry.h
src/test/: main.c
